--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 /*== Bases ==*/
+/* @import url('https://fonts.googleapis.com/css2?family=Sarabun&family=Signika+Negative&display=swap'); */
+
 
 *{
     margin: 0;
@@ -15,61 +17,151 @@ html{
 :root{
     --title-font: 'Signika Negative', sans-serif;
     --text-font: 'Sarabun', sans-serif;
-    --title-size: 8rem;
-    --subtitle-size: calc(var(--title-size) / 2.5);
+    --main-title-size: 4rem;
+    --title-size: calc(var(--main-title-size) - 2rem);
+    --subtitle-size: calc(var(--main-title-size) / 2);
+    --text-size: calc(var(--main-title-size) * 0.30);
 }
 
 .flex{
     display: flex;
 }
 
-.title{
-    font: 600 var(--title-size) var(--title-font);
-
+.grid{
+    display: grid
 }
 
-.subtitle{
-    font: 100 var(--subtitle-size) var(--text-font);
-}
-
-
-/*- colors -*/
-
-
-/*== Navbar ==*/
-#navbar{
-    background: #03738C;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-}
-
-#navbar .container{
-    padding: 1rem 0 1rem 1rem; 
-    justify-content: flex-end;
-}
-
-#navbar ul li{
+ul li{
     list-style-type: none;
 }
 
-#navbar a{
-    font: bold 3.2rem 'Signika Negative', sans-serif;
-    color: white;
-    text-transform: uppercase;
-    margin-right: 7.4rem;
+header h2{
+    text-align: center;
+    font-size: var(--title-size);
+    font-family: var(--title-font);
 }
 
-#welcome .container{
-    background: linear-gradient(50deg, rgba(252,252,252,1) 0%, rgba(0,129,154,0.76234243697479) 100%);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
+/*--Colors--*/
+
+/*== Navbar ==*/
+#navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100vh;
+    background: black;
+    box-shadow: 0px 1px 10px 2px rgba(0,0,0,0.4);
 }
 
-p{
-    font-family: 'Sarabun', sans-serif;
+#navbar ul{
+    justify-content: flex-end;
+}
+
+#navbar a{
+    display: block;
+    text-decoration: none;
+    color: white;
+    font-size: var(--subtitle-size);
+    font-family: var(--title-font);
+    padding: 2rem;
+}
+
+#navbar a:hover{
+    position: relative;
+    background-color: white;
+    color: black;
+}
+
+/*== Welcome ==*/
+#welcome-section{
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+#main-title{
+    font-size: var(--main-title-size);
+    font-family: var(--title-font);
+}
+
+#main-subtitle{
+    font-size: var(--subtitle-size);
+    font-family: var(--text-font);
+}
+
+/*== Projects ==*/
+.cards{
+    gap: 10px;
+    grid-template-columns: 1fr;
+    padding: 10px;
+}
+
+.card{
+    padding: 10px;
+    border: 1px solid black;
+}
+
+img{
+    width: 100%;
+    height: auto;
+}
+
+.caption{
+    font-size: var(--text-size);
+    font-family: var(--text-font);
+}
+
+/*== Contact ==*/
+#contact ul{
+    justify-content: space-evenly;
+}
+
+#contact ul li{
+    transition: 0.2s;
+    padding: 0.7rem;
+}
+
+#contact ul li:hover{
+    transform: translateY(-8%);
+}
+
+#contact ul li a{
+    text-decoration: none;
+    font-size: calc(var(--text-size) * 1.2);
+    font-family: var(--text-font);
+    color: black;
+}
+
+
+
+/*== Footer ==*/
+
+footer{
+    background: black;
+    padding: 0.7rem;
+
+}
+
+footer p{
+    color: white;
+    text-align: end;
+    font-family: var(--text-font);
+}
+
+/*== Media ==*/
+@media(min-width: 768px){
+/*== Bases ==*/
+    :root{
+        --main-title-size: 6rem;
+    }
+
+
+
+    /*== Projects ==*/
+    .cards{
+        grid-template-columns: 1fr 1fr;
+    }
 }
